# sqlite-anki

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  vercel.json
.cargo/: config.toml
.cursor/rules/: rust-documentation.mdc
.github/workflows/: deploy.yml
apps/explorer/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/explorer/scripts/: sync-wasm.mjs
apps/explorer/src/: App.tsx  main.tsx  styles.css
apps/explorer/src/components/: ActivityBar.tsx  DataGrid.tsx  MarkdownEditor.tsx  NotesView.tsx  OpfsTree.tsx  QueryView.tsx  SchemaTree.tsx  StatusBar.tsx  TableView.tsx  ThemeSwitcher.tsx
apps/explorer/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  scroll-area.tsx  select.tsx  tabs.tsx  tooltip.tsx
apps/explorer/src/db/: types.ts  worker.ts
apps/explorer/src/db/demo/: demodb-schema.sql
apps/explorer/src/lib/: opfs.ts  theme.ts
apps/explorer/src/workspaces/: OpfsWorkspace.tsx  SqliteWorkspace.tsx
crates/anki-core/: Cargo.toml  build.rs
crates/anki-core/src/: embedder.rs  error.rs  extension.rs  hnsw.rs  lib.rs  loader.rs  match_query.rs  metrics.rs  vtab.rs
crates/anki-core/src/embedder/: candle.rs  mod.rs  tract.rs
crates/anki-wasm/: Cargo.toml
crates/anki-wasm-minilm/: Cargo.toml  build.rs
crates/anki-wasm-minilm/src/: lib.rs
docs/: DESIGN.md  README.md  build-variants.md  design-choices.md  dynamic-model-loading.md  embeddings-metrics-candle-st-padding128.json  embeddings-metrics-candle-st-paddingNONE.json  embeddings-metrics-tract-st-padding128.json  embeddings-metrics-tract-st-paddingNONE.json  embeddings-metrics.json  hybrid-filtering.md  match-dsl.md  metrics.md  our-findings.md  query-planning.md
models/all-MiniLM-L6-v2/: README.md  config.json
scripts/: build-wasm.sh  download-model.sh  gen-demodb.mjs
wasm/: README.md  anki_extension.c  sqlite3_wasm_extra_init.c
