[workspace]
resolver = "2"
members = [
    "crates/anki-core",
    "crates/anki-wasm-minilm",
]

# panic=abort for the WASM build: on wasm32-unknown-emscripten, panic=unwind
# lowers to Emscripten C++ exceptions (undefined __cpp_exception at link), and
# unwinding across the FFI boundary into SQLite would be UB regardless.
[profile.release]
panic = "abort"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sqlite-anki/sqlite-anki"

[workspace.dependencies]
thiserror = "2"
libc = "0.2"
tract-core = "0.21"
tract-onnx = "0.21"
tract-hir = "0.21"
ndarray = "0.16"
tokenizers = { version = "0.21", default-features = false, features = ["unstable_wasm"] }
parking_lot = "0.12"
once_cell = "1"
