[package]
name = "anki-wasm-minilm"
description = "sqlite-anki WASM build with all-MiniLM-L6-v2 bundled"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
anki-core = { path = "../anki-core" }

# Built for wasm32-unknown-emscripten (see scripts/build-wasm.sh), so getrandom's
# transitive copies (rand/ahash) auto-select Emscripten's getentropy backend. No
# `js`/`wasm_js` feature is needed — those emit wasm-bindgen imports that the
# Emscripten/SQLite host does not provide.
